Scrollbar disappear bug

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -345,6 +345,7 @@ a {
 *::-webkit-scrollbar,
 *::-webkit-scrollbar-thumb {
   width: 26px;
+  min-height: 40px;
   border-radius: 13px;
   background-clip: padding-box;
   border: 10px solid transparent;
